const_typed_builder_test/compile_fail/assume_mandatory_1.stderr
error[E0308]: mismatched types
 --> ./compile_fail/assume_mandatory_1.rs:9:34
  |
9 |     let foo = Foo::builder().bar(Some("Hello world!".to_string())).build();
  |                              --- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `Option<String>`
  |                              |
  |                              arguments to this method are incorrect
  |
  = note: expected struct `String`
               found enum `Option<String>`
note: method defined here
 --> ./compile_fail/assume_mandatory_1.rs:7:9
  |
7 |         bar: Option<String>,
  |         ^^^---------------
